<resources>
    <string name="app_name">白送</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="s_version">版本号</string>
    <string name="s_progress">下载进度</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_title">功能列表</string>
    <string name="home_marqueen">用了小白的APP，腰也不酸了，腿也不疼了。直接去了阎王店！！！</string>
    <string name="home_item_text">手机防盗</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_title">设置中心</string>
    <string name="et_s_set_pass">请输入密码</string>
    <string name="et_s_set_confrimpass">请确认密码</string>
    <string name="et_s_set_pass_title">设置密码</string>
    <string name="et_s_set_pass_ok">确定</string>
    <string name="et_s_set_pass_cancel">取消</string>
    <string name="et_s_input_pass">请输入密码</string>
    <string name="et_s_input_pass_title">输入密码</string>
    <string name="et_s_input_pass_ok">确定</string>
    <string name="et_s_input_pass_cancel">取消</string>
    <string name="title_activity_lost_find">LostFind</string>
    <string name="title_activity_setting1">Setting1Activity</string>
    <string name="setting1_title">1.欢迎使用手机防盗</string>
    <string name="setting1_subtitle">您的手机防盗卫士:</string>
    <string name="setting1_sim">sim卡变更报警</string>
    <string name="setting1_gps">GPS追踪</string>
    <string name="setting1_wipedata">远程数据销毁</string>
    <string name="setting1_lockscreen">远程锁屏</string>
    <string name="setting1_next">下一步</string>
    <string name="title_activity_setting2">Setting2Activity</string>
    <string name="title_activity_setting3">Setting3Activity</string>
    <string name="title_activity_setting4">Setting4Activity</string>
    <string name="setting2_title">2.手机卡绑定</string>
    <string name="setting2_subtitle">通过绑定SIM卡</string>
    <string name="setting2_desc">下次重启手机如果发现SIM卡变化，就会发送报警短信</string>
    <string name="setting2_previous">上一步</string>
    <string name="setting3_title">3.设置安全号码</string>
    <string name="setting3_subtitle">SIM卡变更后</string>
    <string name="setting3_desc">报警短信发送到安全号码</string>
    <string name="setting3_btn">选择联系人</string>
    <string name="setting3_s_btn">请输入或选择联系人号码</string>
    <string name="setting4_title">4.恭喜你，设置完成</string>
    <string name="setting4_next">设置完成</string>
    <string name="lost_find_title">手机防盗</string>
    <string name="lost_find_0">安全号码</string>
    <string name="lost_find_1">防盗保护已开启</string>
    <string name="lost_find_2">重新进入设置向导</string>
    <string name="lost_find_3">功能简介</string>
    <string name="lost_find_4">GPS追踪：#*location*#</string>
    <string name="lost_find_5">播放报警音乐：#*alarm*#</string>
    <string name="lost_find_6">远程删除数据：#*wipedata*#</string>
    <string name="lost_find_7">远程锁屏：#*lockscreen*#</string>
</resources>
