<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.sanmubai.mobilesafe.activity.LostFindActivity">

    <TextView
        style="@style/AppTitle"
        android:text="@string/lost_find_title"/>

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lost_find_0"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="5556"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
        android:background="@mipmap/listview_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lost_find_1"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <ImageView
           android:layout_alignParentRight="true"
           android:src="@mipmap/lock"
           android:layout_width="20dp"
           android:layout_height="20dp"/>
    </RelativeLayout>
    <ImageView
        android:background="@mipmap/listview_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:text="@string/lost_find_2"
        android:background="@drawable/shape_selector"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:background="@mipmap/listview_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="#AEAEAE"
        android:textColor="@color/dark"
        android:text="@string/lost_find_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center_vertical"
        android:drawableLeft="@android:drawable/star_big_on"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:text="@string/lost_find_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center_vertical"
        android:drawableLeft="@android:drawable/star_big_on"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:text="@string/lost_find_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center_vertical"
        android:drawableLeft="@android:drawable/star_big_on"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:text="@string/lost_find_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center_vertical"
        android:drawableLeft="@android:drawable/star_big_on"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:text="@string/lost_find_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
