<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bb="http://schemas.android.com/apk/res/com.sanmubai.mobilesafe"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.sanmubai.mobilesafe.activity.Setting2Activity">

    <TextView
        style="@style/AppTitle"
        android:text="@string/setting2_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/setting2_subtitle"
        android:textColor="@color/dark"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/setting2_desc"
        android:textColor="@color/dark"
        android:textSize="22sp"/>

    <com.sanmubai.mobilesafe.view.SettingItemView
        android:id="@+id/setting_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        bb:desc_off="SIM卡没有绑定"
        bb:desc_on="SIM卡已绑定"
        bb:settingtitle="点击绑定SIM卡"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/setup2"/>

        <Button
            style="@style/SettingPrevious"/>

        <Button
            style="@style/SettingNext"/>

    </RelativeLayout>

</LinearLayout>
